Bug 192718 - kglobalaccel crash occured when logging out of kde 4.3 beta 1
Summary: kglobalaccel crash occured when logging out of kde 4.3 beta 1
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: shortcuts (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-14 23:38 UTC by Alexander Jenisch
Modified: 2009-05-15 01:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Jenisch 2009-05-14 23:38:48 UTC
Application that crashed: kglobalaccel
Version of the application: 0.2
KDE Version: 4.2.85 (KDE 4.2.85 (KDE 4.3 Beta1))
Qt Version: 4.5.1
Operating System: Linux 2.6.29-ARCH i686
Distribution: "(none)"

What I was doing when the application crashed:
see title

 -- Backtrace:
Application: KDE Global Shortcuts Service (kglobalaccel), signal: Aborted
[KCrash Handler]
#6  0xb8069424 in __kernel_vsyscall ()
#7  0xb6948471 in raise () from /lib/libc.so.6
#8  0xb6949ca4 in abort () from /lib/libc.so.6
#9  0xb779f0bd in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb779f1a1 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb805f284 in GlobalShortcutsRegistry::self () from /usr/lib/libkdeinit4_kglobalaccel.so
#12 0xb805d2cd in GlobalShortcut::setInactive () from /usr/lib/libkdeinit4_kglobalaccel.so
#13 0xb805d5e2 in GlobalShortcut::~GlobalShortcut () from /usr/lib/libkdeinit4_kglobalaccel.so
#14 0xb8061e75 in GlobalShortcutContext::~GlobalShortcutContext () from /usr/lib/libkdeinit4_kglobalaccel.so
#15 0xb805956a in KdeDGlobalAccel::Component::~Component () from /usr/lib/libkdeinit4_kglobalaccel.so
#16 0xb805e0da in GlobalShortcutsRegistry::clear () from /usr/lib/libkdeinit4_kglobalaccel.so
#17 0xb805e589 in GlobalShortcutsRegistry::~GlobalShortcutsRegistry () from /usr/lib/libkdeinit4_kglobalaccel.so
#18 0xb805dda5 in GlobalShortcutsRegistry::self()::._168::destroy () from /usr/lib/libkdeinit4_kglobalaccel.so
#19 0xb806137b in KCleanUpGlobalStatic::~KCleanUpGlobalStatic () from /usr/lib/libkdeinit4_kglobalaccel.so
#20 0xb694b456 in exit () from /lib/libc.so.6
#21 0xb6ce7371 in _IceDefaultIOErrorHandler () from /usr/lib/libICE.so.6
#22 0xb6cef186 in _IceRead () from /usr/lib/libICE.so.6
#23 0xb6cf367f in IceProcessMessages () from /usr/lib/libICE.so.6
#24 0xb6e85bb8 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb6e85c21 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb78b0339 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#27 0xb78b0fa2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#28 0xb78eb893 in QSocketNotifier::activated () from /usr/lib/libQtCore.so.4
#29 0xb78b4fa7 in QSocketNotifier::event () from /usr/lib/libQtCore.so.4
#30 0xb6e236ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#31 0xb6e2b9be in QApplication::notify () from /usr/lib/libQtGui.so.4
#32 0xb7e42daa in KApplication::notify () from /usr/lib/libkdeui.so.5
#33 0xb789a24b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#34 0xb78c5c0a in ?? () from /usr/lib/libQtCore.so.4
#35 0xb66ea718 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0xb66edc7b in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#37 0xb66eddf8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0xb78c5978 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#39 0xb6ec22a5 in ?? () from /usr/lib/libQtGui.so.4
#40 0xb789887a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#41 0xb7898cba in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#42 0xb789b149 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#43 0xb6e23567 in QApplication::exec () from /usr/lib/libQtGui.so.4
#44 0xb8054055 in kdemain () from /usr/lib/libkdeinit4_kglobalaccel.so
#45 0x080486db in _start ()
Comment 1 Michael Jansen 2009-05-15 01:05:27 UTC
SVN commit 968114 by mjansen:

Fix code that was dependent on deinitialization of global objects. If the
application wass destroyed before the registry everything was fine
because the app disabled global shortcuts in it's destructor.

If not ... crash because GlobalShortcutsRegistry destructor would call
code that tried to access the GlobalShortcutsRegistry object. Which was
unaccessible at that time. See KGLOBAL_STATIC

BUG: 192718

 M  +8 -1      globalshortcutsregistry.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=968114