Fix code that was dependent on deinitialization of global objects. If the application wass destroyed before the registry everything was fine because the app disabled global shortcuts in it's destructor.

If not ... crash because GlobalShortcutsRegistry destructor would call
code that tried to access the GlobalShortcutsRegistry object. Which was
unaccessible at that time. See KGLOBAL_STATIC

BUG: 192718

svn path=/trunk/KDE/kdebase/runtime/; revision=968114